changed products html and css
added images for each family

--- a/html/produtos.html
+++ b/html/produtos.html
@@ -132,98 +132,99 @@
             
             <div class="ervas-cha photo-div-product" >
                 <a href="/html/ervasECha.html">
-                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
+                    <img src="/images/produtos/produtos-ervaseCha.jpg" alt="https://unsplash.com/pt-br/fotografias/um-copo-de-vidro-cheio-de-cha-ao-lado-de-um-cigarro-SnFPugl-rv4?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
                     <p>Ervas e Chá</p>
                 </a>
             </div>
 
             <div class="saladas photo-div-product">
                 <a href="/html/saladas.html">
-                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
+                    <img src="/images/produtos/produtos-saladas.jpg" alt="https://unsplash.com/pt-br/fotografias/uma-tigela-de-madeira-recheada-com-uma-salada-e-duas-colheres-3YRxJW2GQCc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
                     <p>Saladas</p>
                 </a>
             </div>
 
             <div class="verduras-folhas photo-div-product">
                 <a href="/html/verduras.html">
-                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
+                    <img src="/images/produtos/produtos-couvesEFolhas.jpg" alt="Couves">
                     <p>Couves e Folhas</p>
                 </a>
             </div>
 
             <div class="ovos-sabao photo-div-product">
                 <a href="/html/ovos.html">
-                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
+                    <img src="/images/produtos/produtos-ovos.jpg" alt="https://unsplash.com/pt-br/fotografias/duzia-de-ovos-na-bandeja-omEpnvmwWz0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
                     <p>Ovos</p>
                 </a>
             </div>
 
             <div class="raizes photo-div-product">
                 <a href="/html/raizes.html">
-                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
+                    <img src="/images/produtos/produtos-raizes.jpg" alt="Foto de um produto de raiz">
                     <p>Raízes</p>
                 </a>
             </div>
 
             <div class="microverdes-germinados photo-div-product">
                 <a href="/html/microverdes.html">
-                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
+                    <img src="/images/produtos/produtos-microverdes.jpg" alt="https://unsplash.com/pt-br/fotografias/ilustracao-de-brotos-verdes-Ti2QQ36R5dQ?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
                 <p>Microverdes</p>
                 </a>
             </div>
 
             <div class="vasos-plantas photo-div-product">
                 <a href="/html/plantasEmVaso.html">
-                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
+                    <img src="/images/produtos/produtos-plantasEmVaso.jpg" alt="https://unsplash.com/pt-br/fotografias/um-par-de-plantas-em-vaso-sentando-se-em-cima-de-uma-mesa-de-madeira-51C7VX9WNYE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
                     <p>Plantas</p>
                 </a>
             </div>
 
             <div class="flores-comestiveis photo-div-product">
                 <a href="/html/floresComestiveis.html">
-                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
+                    <img src="/images/produtos/produtos-floresComestiveis.jpg" alt="https://unsplash.com/pt-br/fotografias/um-prato-de-bolo-e-uma-xicara-de-cafe-em-uma-mesa-3eHdk6dPY3U?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
+      
                     <p>Flores</p>
                 </a>
             </div>
 
             <div class="leguminosas photo-div-product">
                 <a href="/html/leguminosas.html">
-                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
+                    <img src="/images/produtos/produtos-leguminosas.jpg" alt="https://unsplash.com/pt-br/fotografias/um-close-up-de-ervilhas-sUdTHp5iOQI?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
                     <p>Leguminosas</p>
                 </a>
             </div>
 
             <div class="horticolas-frio photo-div-product">
                 <a href="/html/horticulas.html">
-                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
-                    <p>Horticolas de fruto</p>
+                    <img src="/images/produtos/produtos-horticulasDeFruto.jpg" alt="https://unsplash.com/pt-br/fotografias/morangos-na-cesta-de-vime-marrom-LN9Rbmj3dmE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
+                    <p>Horticolas</p>
                 </a>
             </div>
 
             <div class="horticolas-frio photo-div-product">
                 <a href="/html/compotas.html">
-                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
+                    <img src="/images/produtos/produtos-compotas.jpg" alt="https://unsplash.com/pt-br/fotografias/frasco-de-vidro-transparente-com-liquido-marrom-o_O75f28GiA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">      
                     <p>Compotas</p>
                 </a>
             </div>
 
             <div class="horticolas-frio photo-div-product">
                 <a href="/html/cogumelos.html">
-                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
+                    <img src="/images/produtos/produtos-cogumelos.jpg" alt="https://unsplash.com/pt-br/fotografias/a-bowl-of-nuts-and-leaves-59S8qiyCohE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
                     <p>Cogumelos</p>
                 </a>
             </div>
 
             <div class="sabao-Natural photo-div-product">
                 <a href="/html/sabaoNatural.html">
-                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
+                    <img src="/images/produtos/produtos-sabaoNatural.jpg" alt="https://unsplash.com/pt-br/fotografias/queijo-branco-na-mesa-branca-txNjV206Jw4?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
                     <p>Sabão Natural</p>
                 </a>
             </div>
 
             <div class="sabao-Natural photo-div-product">
                 <a href="/html/carnes.html">
-                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
+                    <img src="/images/produtos/produtos-carnes.jpg" alt="https://unsplash.com/pt-br/fotografias/uma-tabua-de-corte-de-madeira-com-objetos-marrons-sobre-ela-nlBelQEqwZQ?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
                     <p>Carnes</p>
                 </a>
             </div>
