--- a/html/informations.html
+++ b/html/informations.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/stylesheet/ervasECha.css">
     <link rel="stylesheet" href="/stylesheet/navAndSearch.css">
     <link rel="stylesheet" href="/stylesheet/informations.css">
+     <link rel="stylesheet" href="/stylesheet/popUp.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 
@@ -76,7 +77,25 @@
             <a href="/html/videos.html"><li>Videos</li></a>
         </ul>
 
-    </header>        
+    </header>       
+
+    
+   <!-- POP-UP  -->
+    <dialog>
+        <section class="pop-up-encomendas" id="popUpEncomendas">
+            <!-- <button class="close-pop-up">x</button> -->
+            <i class="fa-solid fa-rectangle-xmark close-pop-up"></i>
+            <div class="pop-up-mensagem">
+            <p>Faz a encomenda do teu cabaz entre 2ª e 4ª feira.</p>
+            <p>Podes escolher entre 3 cabazes diferentes ou criar o teu próprio cabaz.</p>
+            </div>
+            <div class="pop-up-buttons">
+                <button id="seeCabazes">Ver Cabazes</button>
+                <button id="createCabaz">Criar Cabaz</button>
+            </div>
+        </section>
+    </dialog>
+
 
     <!-- search bar -->
         <!-- <div class="searchBar-div">
