--- a/html/ovos.html
+++ b/html/ovos.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/stylesheet/footer.css">
     <link rel="stylesheet" href="/stylesheet/ervasECha.css">
     <link rel="stylesheet" href="/stylesheet/navAndSearch.css">
+     <link rel="stylesheet" href="/stylesheet/popUp.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/> -->
