--- a/html/videos.html
+++ b/html/videos.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="/stylesheet/contacts.css">
     <link rel="stylesheet" href="/stylesheet/footer.css">
     <link rel="stylesheet" href="/stylesheet/videos.css">
+     <link rel="stylesheet" href="/stylesheet/popUp.css">  
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 
@@ -79,6 +81,23 @@
                 </ul>
         
             </header>        
+
+     <!-- POP-UP  -->
+    <dialog>
+        <section class="pop-up-encomendas" id="popUpEncomendas">
+            <!-- <button class="close-pop-up">x</button> -->
+            <i class="fa-solid fa-rectangle-xmark close-pop-up"></i>
+            <div class="pop-up-mensagem">
+            <p>Faz a encomenda do teu cabaz entre 2ª e 4ª feira.</p>
+            <p>Podes escolher entre 3 cabazes diferentes ou criar o teu próprio cabaz.</p>
+            </div>
+            <div class="pop-up-buttons">
+                <button id="seeCabazes">Ver Cabazes</button>
+                <button id="createCabaz">Criar Cabaz</button>
+            </div>
+        </section>
+    </dialog>
+
         
             <!-- search bar -->
                 <!-- <div class="searchBar-div">
