--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -80,9 +80,8 @@
             </header>        
 
      <!-- POP-UP  -->
-    <dialog>
+  <!--  <dialog>
         <section class="pop-up-encomendas" id="popUpEncomendas">
-            <!-- <button class="close-pop-up">x</button> -->
             <i class="fa-solid fa-rectangle-xmark close-pop-up"></i>
             <div class="pop-up-mensagem">
             <p>Faz a encomenda do teu cabaz entre 2ª e 4ª feira.</p>
@@ -93,7 +92,7 @@
                 <button id="createCabaz">Criar Cabaz</button>
             </div>
         </section>
-    </dialog>
+    </dialog> -->
         
             <!-- search bar -->
                 <!-- <div class="searchBar-div">
