--- a/html/carrinho.html
+++ b/html/carrinho.html
@@ -80,10 +80,9 @@
             </header>  
 
     
-   <!-- POP-UP  -->
-    <dialog>
+      <!-- POP-UP  -->
+  <!--  <dialog>
         <section class="pop-up-encomendas" id="popUpEncomendas">
-            <!-- <button class="close-pop-up">x</button> -->
             <i class="fa-solid fa-rectangle-xmark close-pop-up"></i>
             <div class="pop-up-mensagem">
             <p>Faz a encomenda do teu cabaz entre 2ª e 4ª feira.</p>
@@ -94,7 +93,7 @@
                 <button id="createCabaz">Criar Cabaz</button>
             </div>
         </section>
-    </dialog>
+    </dialog> -->
         
             <!-- search bar -->
                 <!-- <div class="searchBar-div">
