added pop-Up only to index.html and advancePageOne.html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <script type="module" src="/scriptDocs/testimonials.js" defer></script>
     <script type="module" src="/scriptDocs/aboutUs.js"></script>
+    <script type="module" src="/scriptDocs/popUpEncomendas.js"></script>
 
 
     <title>Horta d'Ria - Home Page - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
@@ -81,22 +82,7 @@
 
 
     <!-- POP-UP  -->
-    <dialog>
-        <section class="pop-up-encomendas" id="popUpEncomendas">
-            <!-- <button class="close-pop-up">x</button> -->
-            <i class="fa-solid fa-rectangle-xmark close-pop-up"></i>
-            <div class="pop-up-mensagem">
-            <p>Faz a encomenda do teu cabaz entre 2ª e 4ª feira.</p>
-            <p>Podes escolher entre 3 cabazes diferentes ou criar o teu próprio cabaz.</p>
-            </div>
-            <div class="pop-up-buttons">
-                <button id="seeCabazes">Ver Cabazes</button>
-                <button id="createCabaz">Criar Cabaz</button>
-            </div>
-        </section>
-    </dialog>
-
-
+        <section class="pop-up-encomendas" id="popUpEncomendas"></section>
 
 
     <!-- search bar -->
