--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -130,7 +130,7 @@
     <section class="client-data-sec">
         <!-- ADD ACTION  -->
         <form class="cart-form" name="hortaDaRiaEncomenda" action="/html/orderSentPage.html" method="POST" data-netlify="true"> 
-        <input type="hidden" name="subject" value="Nova Encomenda" id="newMessage" data-remove-prefix>
+        <input type="hidden" name="subject" value="" id="newOrderSubject" data-remove-prefix>
         
 
             <h4>
