--- a/html/success.html
+++ b/html/success.html
@@ -129,7 +129,8 @@
             <span>Enviado com Sucesso!</span><br>
             <i class="fa-regular fa-paper-plane animate__animated animate__fadeInBottomLeft"></i><br>
             <span>Obrigado pela tua mensagem!</span>
-            <!-- <p>Em breve, entraremos em contacto contigo!</p> -->
+            <p>Vais receber um email com a tua mensagem que serve como confirmaçáo de envio. Pode estar na pasta de Spam.</p>
+            <p>Em breve entraremos em contacto.</p>
         </div>
         
         <div class="follow-us-message">
