changed local pin form google maps

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             </div>
     
             <div class="social-media">
-                <a href="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d199.7172464475812!2d-8.532314957027788!3d41.415893192984065!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd2459b246fa58dd%3A0x613d345e2b378c16!2sR.%20Pinho%20Leal%2057%2C%20Brufe!5e1!3m2!1spt-PT!2spt!4v1748356713827!5m2!1spt-PT!2spt" target="_blank">
+                <a href="https://www.google.com/maps/place/Horta+d'Ria/@41.4159307,-8.5320716,582m/data=!3m2!1e3!4b1!4m6!3m5!1s0xd2459ae2f36b75f:0x415ea5f6efaa6ccb!8m2!3d41.4159307!4d-8.5320716!16s%2Fg%2F11w20j5zxm?hl=pt-PT&entry=ttu&g_ep=EgoyMDI1MDUyMS4wIKXMDSoJLDEwMjExNDUzSAFQAw%3D%3D" target="_blank">
                     <i class="fa-solid fa-map-location-dot"></i>
                 </a>
                 <span class="location-name">V. N. Famalicão</span>
