--- a/html/carnes.html
+++ b/html/carnes.html
@@ -161,13 +161,13 @@
             </div>
         </div>
 
-        <div class="social-media">
-            <a href="https://maps.app.goo.gl/ZR7CWSfpoNfkTDMD9" target="_blank">
-                <i class="fa-solid fa-map-location-dot"></i>
-            </a>
-            <span class="location-name">V. N. Famalicão</span>
+         <div class="social-media">
+                <a href="https://www.google.com/maps/place/Horta+d'Ria/@41.4159307,-8.5320716,582m/data=!3m2!1e3!4b1!4m6!3m5!1s0xd2459ae2f36b75f:0x415ea5f6efaa6ccb!8m2!3d41.4159307!4d-8.5320716!16s%2Fg%2F11w20j5zxm?hl=pt-PT&entry=ttu&g_ep=EgoyMDI1MDUyMS4wIKXMDSoJLDEwMjExNDUzSAFQAw%3D%3D" target="_blank">
+                    <i class="fa-solid fa-map-location-dot"></i>
+                </a>
+                <span class="location-name">V. N. Famalicão</span>
 
-        </div>
+            </div>
 
         <div class="footer-end">
             <a href="/index.html#cabazesMenu"><p>Cabazes</p></a>
