--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
                 <div class="cabaz-1 photo-div-cabaz">
                     <a href="/html/cabaz-um.html">
-                        <!-- <img src="/images/logo.png" alt=""> -->
+                        <!-- <img src="/images/fotosCabazes/cabazes-semana.jpg" alt=""> -->
                         <div class="cabazOne"></div>
                     </a>
                 </div>
