--- a/html/form.html
+++ b/html/form.html
@@ -30,7 +30,7 @@
     <link rel="icon" type="image/jpg" href="/images/logo-circle.jpg">
 
      <!-- EMAIL JS -->
-       <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+       <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script type="text/javascript">
         (function () {
             emailjs.init({
@@ -38,7 +38,7 @@
             });
         })();
     </script>
-    <script defer src="/EmailJSTemplates/contactForm.js"></script>
+    <script defer src="/EmailJSTemplates/contactForm.js"></script> -->
 
 </head>
 <body>
@@ -134,12 +134,11 @@
 
     <!-- FORMULARIO DE CONTACTO -->
 
-    <!-- <form class="contactForm" name="Horta_da_Ria" action="/html/success.html" method="POST" data-netlify="true">  -->
-    <!-- <input type="hidden" name="subject" value="" id="newMessage" data-remove-prefix> -->
+    <form class="contactForm" name="Horta_da_Ria" action="/html/success.html" method="POST" data-netlify="true"> 
+    <input type="hidden" name="subject" value="" id="newMessage" data-remove-prefix>
 
-    <form class="contactForm" onsubmit="openSuccessPage(event)" method="post "> 
-
-        
+    <!-- code needed to send emails via EmailJSTemplates -->
+    <!-- <form class="contactForm" onsubmit="openSuccessPage(event)" method="post ">  -->
 
         <div class="introduction">
             <p class="introductionText">
