created an innerHtml on script.js to could change header only one time
removed all header html code in all html files and added a function that do the same in javascript

--- a/index.html
+++ b/index.html
@@ -39,50 +39,7 @@
 </head>
 <body>
             <!-- NAVBAR -->
-    <header>
-
-        <nav class="navbar" id="navBar">
-
-            <!-- <div class="logo-img-div">
-                <img src="images/logo.png" class="logo-img" alt="Logotipo - Horta d'Ria - Agricultura Natural - cor verde">
-            </div> -->
-
-            <div class="logo-img-div">
-                <h1>
-                    Horta d'Ria
-                </h1>
-            </div>
-
-            <div class="cart-and-menu">
-
-                <i class="fa-solid fa-magnifying-glass"></i>
-
-                <div class="cart-div">
-                    <a href="/html/carrinho.html">
-                        <!-- cesto -->
-                        <i class="fa-solid fa-basket-shopping"></i>
-                    </a>
-                    <span class="article-number"></span>
-                </div>
-                <!-- menu para telemovel -->
-                <i class="fa-solid fa-bars-staggered openMenu"></i>
-            </div>
-
-        </nav>
-
-        <ul class="menu-list">
-                <!-- href.value = element.id.value -->
-            <a href="/html/aboutUs.html"> <li>Quem Somos</li>  </a>
-            <a href="/index.html#cabazesMenu" id="cabazesButton"><li>Cabazes</li></a>
-            <a href="/html/produtos.html"> <li>Produtos</li></a>
-            <a href="/html/form.html"> <li>Contactos</li></a>
-            <a href="/html/informations.html"> <li>Informações</li></a>
-            <a href="/html/testemunhos.html"> <li>Testemunhos</li></a>
-            <a href="/html/basketHistoric.html"> <li>Fotos</li></a>
-            <a href="/html/videos.html"><li>Videos</li></a>
-        </ul>
-
-    </header>        
+    <header></header>        
 
 
     <!-- POP-UP  -->
@@ -91,13 +48,7 @@
 
     <!-- search bar -->
 
-        <div class="searchBar-div">
-            <h3>Procurar produtos na Horta d'Ria</h3>
-            <i class="fa-solid fa-xmark close-searchbar"></i>
-            <input type="search" class="searchBarInput" placeholder="Ex: Cenoura">
-            <ul class="searchResults"></ul>
-            <!-- <button type="button" class="searchbar-button">Pesquisar</button>    -->
-        </div> 
+        <div class="searchBar-div"></div> 
 
 
         <!-- <div class="popUpTerms"></div> -->
