--- a/html/verduras.html
+++ b/html/verduras.html
@@ -22,8 +22,7 @@
     <script type="module" src="/scriptDocs/verduras.js" defer></script>
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
     <script type="module" src="/script.js" defer></script>
-
-
+    <script type="module" src="/scriptDocs/searchBar.js" defer></script>
 
     <title>Verduras - Horta d'Ria - Produtos Biológicos - Vila Nova de Famalicão</title>
     <link rel="icon" type="image/jpg" href="/images/logo-circle.jpg">
@@ -32,60 +31,13 @@
 
 </head>
 <body>
-    
-       <!-- NAVBAR -->
-       <header>
-
-        <nav class="navbar" id="navBar">
-
-            <!-- <div class="logo-img-div">
-                <img src="images/logo.png" class="logo-img" alt="Logotipo - Horta d'Ria - Agricultura Natural - cor verde">
-            </div> -->
-
-            <div class="logo-img-div">
-                <a href="/index.html">
-                     <h1>
-                         Horta d'Ria
-                     </h1>
-                </a>
-             </div>
-
-            <div class="cart-and-menu">
-
-                <div class="cart-div">
-                    <a href="/html/carrinho.html">
-                        <!-- cesto -->
-                        <i class="fa-solid fa-basket-shopping"></i>
-                    </a>
-                    <span class="article-number"></span>
-                </div>
-                <!-- menu para telemovel -->
-                <i class="fa-solid fa-bars-staggered openMenu"></i>
-            </div>
-
-        </nav>
-
-        <ul class="menu-list">
-                <!-- href.value = element.id.value -->
-            <a href="/html/aboutUs.html"> <li>Quem Somos</li>  </a>
-            <a href="/index.html#cabazesMenu" id="cabazesButton"><li>Cabazes</li></a>
-            <a href="/html/produtos.html"> <li>Produtos</li></a>
-            <a href="/html/form.html"> <li>Contactos</li></a>
-            <a href="/html/informations.html"> <li>Informações</li></a>
-            <a href="/html/testemunhos.html"> <li>Testemunhos</li></a>
-            <a href="/html/basketHistoric.html"> <li>Fotos</li></a>
-            <a href="/html/videos.html"><li>Videos</li></a>
-        </ul>
-
-    </header>    
-
- 
+   <!-- NAVBAR -->
+    <header></header>
 
     <!-- search bar -->
-        <!-- <div class="searchBar-div">
-            <input type="search" class="searchBarInput">
-                <i class="fa-solid fa-magnifying-glass"></i>
-        </div>  -->
+
+    <div class="searchBar-div"></div>
+
         <!-- <div class="popUpTerms"></div> -->
         <!-- BOTTOM MENU BAR -->
         <section class="bottom-menu">
