changes on phone number and post code when is to deliver
The phone number input is now required

The first part of the postcode is no longer a read-only value.
Customers can now write a complete and valid postcode.

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -116,8 +116,8 @@
                     <input id="email" type="email" name="Email" required class="required">
                 </div>
                 <div>
-                    <label for="phone-number">Telemóvel</label>
-                    <input id="phone-number" type="number" name="Telemóvel">
+                    <label for="phone-number">Telemóvel<span class="required-input-icon">*</span></label>
+                    <input id="phone-number" type="number" name="Telemóvel" placeholder="9********" required class="required">
                 </div>
 
             </section>
@@ -140,7 +140,7 @@
                         <label for="cp">Código Postal<span class="required-input-icon">*</span></label>
                     </div>
                     <div class="cp-numbers">
-                        <input id="cp" type="number" name="CódigoPostalUm" required class="required" value="4760">
+                        <input id="cp" type="number" name="CódigoPostalUm" required class="required" value="">
                         <input id="cP" type="number" name="CódigoPostalDois" required class="required">
                     </div>
                 </div>
