fix title style in products page

--- a/html/produtos.html
+++ b/html/produtos.html
@@ -84,7 +84,7 @@
 
     <section class="all-products" id="productsList">
 
-        <div class="title-div">
+        <div class="products-title">
             <h1>Cria o teu Cabaz</h1>
         </div>
 
