--- a/html/ovos.html
+++ b/html/ovos.html
@@ -83,7 +83,7 @@
         <h4 class="section-title">Ovos</h4>
         <div class="description">
             <p class="description">As nossas galinhas andam em pasto ao ar livre a comer erva e bichos. </p>
-            <p class="description">Complementamos a alimentação delas com uma mistura de cereais da biozezere.</p>
+            <p class="description">Complementamos a alimentação delas com uma mistura de cereais.</p>
         </div>
     </section>
 
