created a new pop up for holidays

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script type="module" src="/scriptDocs/testimonials.js" defer></script>
     <script type="module" src="/scriptDocs/aboutUs.js"></script>
     <script type="module" src="/scriptDocs/popUpEncomendas.js"></script>
-
+    <script type="module" src="/scriptDocs/holidayPopUp.js"></script>
 
     <title>Horta d'Ria - Home Page - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
     <link rel="icon" type="image/jpg" href="/images/logo-circle.jpg">
@@ -43,7 +43,9 @@
     <!-- POP-UP  -->
         <section class="pop-up-encomendas" id="popUpEncomendas"></section>
 
-
+        <section class="holiday-pop-up" id="holidayPopUp">
+            <i class="fa-solid fa-rectangle-xmark close-pop-up-button"></i>
+        </section>
     <!-- search bar -->
 
         <div class="searchBar-div"></div> 
