GOOGLE TAG AND HISTORIC ORDERS
added google tag for analytics, on header function

started building the historic orders page

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -21,7 +21,7 @@
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
     <!-- <script  src="\scriptDocs/ervasECha.js" defer></script> -->
-    <script type="module" src="\script.js" defer></script>
+    <script type="module" src="/script.js" defer></script>
 
     <script type="module" src="/scriptDocs/advancePageOne.js" defer></script>
     <script type="module" src="/scriptDocs/popUpEncomendas.js"></script>
@@ -46,41 +46,7 @@
     <section class="pop-up-encomendas" id="popUpEncomendas"></section>
 
     <!-- BOTTOM MENU BAR -->
-    <section class="bottom-menu">
-        <div class="home">
-            <a href="\index.html">
-                <i class="fa-solid fa-house"></i>
-            </a>
-        </div>
-
-
-        <!-- ==================test cart here ================== -->
-
-        <div class="cart-div">
-            <a href="/html/carrinho.html">
-                <i class="fa-solid fa-basket-shopping"></i>
-            </a>
-            <span class="article-number"></span>
-        </div>
-
-        <!-- ================================================== -->
-
-        <div class="info">
-            <a href="/html/informations.html">
-                <i class="fa-solid fa-info"></i>
-            </a>
-        </div>
-        <div class="criar-cabaz">
-            <a href="/html/produtos.html">
-                <i class="fa-solid fa-seedling"></i>
-            </a>
-        </div>
-        <div class="">
-            <a href="/html/basketHistoric.html">
-                <i class="fa-solid fa-inbox"></i>
-            </a>
-        </div>
-    </section>
+        <section class="bottom-menu" id="bottomIconsMenu"></section>
 
     <section class="client-data-sec">
         <!-- ADD ACTION  -->
