added a new feature
now users can see the last orders.

orders are located in localStorage

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -24,8 +24,9 @@
     <script type="module" src="/script.js" defer></script>
 
     <script type="module" src="/scriptDocs/advancePageOne.js" defer></script>
-    <script type="module" src="/scriptDocs/popUpEncomendas.js"></script>
+    <script type="module" src="/scriptDocs/popUpEncomendas.js" defer></script>
     <script type="module" src="/scriptDocs/searchBar.js" defer></script>
+    <script type="module" src="/scriptDocs/ordersHistoric.js" defer></script>
 
 
     <title>Preenchimento dados - Horta d'Ria - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
