--- a/html/ordersHistoric.html
+++ b/html/ordersHistoric.html
@@ -27,7 +27,9 @@
 
     <script type="module" src="/script.js" defer></script>
     <script type="module" src="/scriptDocs/searchBar.js" defer></script>
-    <script type="module" src="/scriptDocs/ordersHistoric.js"></script>
+    <script type="module" src="/scriptDocs/ordersHistoric.js" defer></script>
+    <script type="module" src="/scriptDocs/advancePageOne.js" defer></script>
+
 </head>
 <body>
   <!-- NAVBAR -->
@@ -41,7 +43,9 @@
               <!-- BOTTOM MENU BAR -->
         <section class="bottom-menu" id="bottomIconsMenu"></section>
 
-        <!-- VIDEOS -->
+    <!-- ITEM ADDED TO CART -->
+    <div class="alert"></div>
+
      
 
         <section class="orders-historic-section" id="ordersHistoricSection">
@@ -49,7 +53,9 @@
            <p>Últimos 3 meses</p>
         </section>
 
-        <button class="send-user-data-btn">guardar</button>
+        <button class="send-user-data-btn" style="display: none;">guardar</button>
+        <!-- <button class="send-user-data-btn">guardar</button> -->
+
 
 
         <section class="media-and-contacts" id="contactsAndSocialMedia">
@@ -109,7 +115,7 @@
                 <p class="reservedRigths my-name"></p>
 
                 <a href="https://portfoliosimaopedro.webdevsp.com/">
-                    <p class="my-name"><span class="designBy">Developed by Simão Pedro</p>
+                    <p class="my-name"></p>
                 </a>
             </div>
             
