--- a/html/verduras.html
+++ b/html/verduras.html
@@ -105,9 +105,9 @@
         <div class="webDevSp">
             <p class="reservedRigths my-name"></p>
 
-            <a href="https://portfoliosimaopedro.webdevsp.com/">
-                <p class="my-name"><span class="designBy">Created by Simão Pedro</p>
-            </a>
+           <a href="https://portfoliosimaopedro.webdevsp.com/">
+                    <p class="my-name"></p>
+                </a>
         </div>
         
     </section>
