--- a/html/videos.html
+++ b/html/videos.html
@@ -104,8 +104,8 @@
             <div class="webDevSp">
                 <p class="reservedRigths my-name"></p>
 
-                <a href="https://portfoliosimaopedro.webdevsp.com/">
-                    <p class="my-name"><span class="designBy">Developed by Simão Pedro</p>
+               <a href="https://portfoliosimaopedro.webdevsp.com/">
+                    <p class="my-name"></p>
                 </a>
             </div>
             
